syntax = "proto3";

package main;

option go_package = "./api";

import "google/api/annotations.proto";

service TestApi {
    rpc SendMessage(SendMessageRequest) returns (Response) {
        option (google.api.http) = {
            post: "/send_message"
            body: "*"
        };
    }
    rpc GetUser(UserRequest) returns (UserResponse){
        option (google.api.http) = {
            get:"/user/{id}"
        };
    }
}

message SendMessageRequest{
    uint32 id = 1;
    string message = 2;
}

message Response{}

message UserRequest{
    uint32 id = 1;
}

message UserResponse{
    string username = 1;
    string email = 2;
}